--- a/DnDAppAndroid/DnDAppAndroid/Resources/layout/goldPouch.axml
+++ b/DnDAppAndroid/DnDAppAndroid/Resources/layout/goldPouch.axml
@@ -193,7 +193,7 @@
                 android:inputType="number"
                 android:layout_width="match_parent"
                 android:layout_height="80px"
-                android:id="@+id/copperAmount_incr"
+                android:id="@+id/splitAmount_incr"
                 android:layout_marginTop="-60px"
                 android:layout_marginLeft="200px"
                 android:layout_marginRight="200px"
