--- a/DnDAppAndroid/DnDAppAndroid/Resources/layout/loadChar.axml
+++ b/DnDAppAndroid/DnDAppAndroid/Resources/layout/loadChar.axml
@@ -37,5 +37,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/inventory" />
+        <Button
+            android:text="Experience"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/experience" />
     </LinearLayout>
 </LinearLayout>
