--- a/DnDAppAndroid/DnDAppAndroid/Resources/layout/experience.axml
+++ b/DnDAppAndroid/DnDAppAndroid/Resources/layout/experience.axml
@@ -58,6 +58,26 @@
         android:textStyle="bold"
         android:enabled="false" />
     <TextView
+        android:text="Proficiency :"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:textSize="35px"
+        android:layout_marginTop="30px"
+        android:layout_marginLeft="10px" />
+    <EditText
+        android:inputType="number"
+        android:layout_width="match_parent"
+        android:layout_height="80px"
+        android:id="@+id/proficiencyAmount"
+        android:layout_marginTop="-60px"
+        android:layout_marginLeft="200px"
+        android:layout_marginRight="100px"
+        android:textSize="40px"
+        android:text="0"
+        android:textStyle="bold"
+        android:enabled="false" />
+    <TextView
         android:text="Increase / Split"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -125,6 +145,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/split_experience"
+        android:textSize="35px"
+        android:layout_marginTop="-5px" />
+    <Button
+        android:text="Reset"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/reset_experience"
         android:textSize="35px"
         android:layout_marginTop="-5px" />
 </LinearLayout>
